changed the title to 'The Gamechanger'

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Progate</title>
+        <title>The Gamechanger</title>
     </head>
     <body>
-        <h1 class="title">How to make a website with HTML & CSS on your computer</h1>
+        <h1 class="title">An Introduction page</h1>
     </body>
 </html>
