turned into my personal page

--- a/index.html
+++ b/index.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>The Gamechanger</title>
-    </head>
-    <body>
-        <h1 class="title">An Introduction page</h1>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ritik Chauhan</title>
+    <meta name="Portfolio website of Ritik Chauhan" content="Resume and other academic details">
+</head>
+<body>
+<h3><a href="https://drive.google.com/file/d/16A5ztdUTpmEUTyPYI9_ptiLl9QDVs1JN/view?usp=sharing">Resume</a></h3>
+<h1>RITIK CHAUHAN</h1>
+<p>Github - <a href="https://github.com/ritik-chauhan" target="_blank">https://github.com/ritik-chauhan</a>
+<br>
+LinkedIn - <a href="https://www.linkedin.com/in/ritik-chauhan-b08340192/" target="_blank">https://www.linkedin.com/in/ritik-chauhan/</a></p>
+<hr>
+  Hello! Everyone, Welcome to my portfolio website.
+  I'm right now thinking what stuff to add to this website of mine.
+  help me out if you can. I will be thankful.
+  <hr>
+  <h1>My Skills</h1>
+  <b>C++</b>
+  <br>
+  <b>Python</b>
+  <br>
+  <b>Java</b>
+  
+
+</body>
 </html>
