--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <h3><a href="https://drive.google.com/file/d/16A5ztdUTpmEUTyPYI9_ptiLl9QDVs1JN/view?usp=sharing">Resume</a></h3>
+<img src="images/star-lord.jpg" alt="profilepic">
 <h1>RITIK CHAUHAN</h1>
 <p>Github - <a href="https://github.com/ritik-chauhan" target="_blank">https://github.com/ritik-chauhan</a>
 <br>
