--- a/index.html
+++ b/index.html
@@ -12,13 +12,19 @@
 <h1>RITIK CHAUHAN</h1>
 <p>Github - <a href="https://github.com/ritik-chauhan" target="_blank">https://github.com/ritik-chauhan</a>
 <br>
-LinkedIn - <a href="https://www.linkedin.com/in/ritik-chauhan-b08340192/" target="_blank">https://www.linkedin.com/in/ritik-chauhan/</a></p>
+LinkedIn - <a href="https://www.linkedin.com/in/ritik-chauhan-b08340192/" target="_blank">https://www.linkedin.com/in/ritik-chauhan</a>
+<br>
+Twitter - <a href="https://x.com/gcstwt" target="_blank">https://twitter.com/gcstwt</a>
+</p>
 <hr>
-  Hello! Everyone, Welcome to my portfolio website.
-  I'm right now thinking what stuff to add to this website of mine.
-  help me out if you can. I will be thankful.
+  
+  My name is Ritik Chauhan. I am a Computer Science Graduate. 
+  <br>
+  I'm working as a Business Analyst at a Automobile Company. I have a keen interest in Data Science and Machine Learning.
+  I have worked on various projects in warehouse optimization and Sales Order processing.
   <hr>
-  <h1>My Skills</h1>
+  <h2>My Skills</h2>
+  <h3>ERP Software: SAP S4HANA: EWM & SD</h3>
   <b>C++</b>
   <br>
   <b>Python</b>
